# PredictiveCO-Benchmark

./: .bashrc  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.VSCodeCounter/2024-03-26_19-53-23/: details.md  diff-details.md  diff.md  diff.txt  results.md  results.txt
.VSCodeCounter/2024-03-26_19-54-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-26_19-54-22/: details.md  diff-details.md  diff.md  diff.txt  results.md  results.txt
cfgs/spop_probs/: bipartitematching.yaml  budgetalloc.yaml  cubic.yaml  energy.yaml  knapsack.yaml  rmab.yaml
examples/: try.py
openpto/: __init__.py  requirements.txt  utils.py
openpto/config/: __init__.py  conf_utils.py  utils_conf.py
openpto/config/generalize/: gen-kp.yaml  (+4 more)
openpto/expmanager/: ExpManager.py  OodManager.py  __init__.py  dataset.py  manager_utils.py  utils_manager.py
openpto/method/: Method.py  loss.py  loss_utils.py  pred_model.py  prediction_model.py  utils_method.py
openpto/metrics/: evals.py  regret.py
openpto/problems/: Advertising.py  BipartiteMatching.py  BudgetAllocation.py  CubicTopK.py  DiverseRec.py  Energy.py  Knapsack.py  PTOProblem.py  PortfolioOpt.py  RMAB.py  RandomTopK.py  Shortestpath.py  Shortestpath_D.py  TSP.py  prob_utils.py  utils_prob.py  wrapper_prob.py
openpto/utils/: utils.py
rethink-exp/: main_results.py
rethink_exp/: collect_results.py  main_results.py  ood_results.py  run.sh
rethink_exp/shells/: budget.sh  cubic.sh  knapsack.sh
saved_problems/: BudgetAllocation.csv  BudgetAllocation_0.pkl  CubicTopK.csv  CubicTopK_0.pkl  Knapsack.csv  Knapsack_0.pkl  Knapsack_10.pkl  Knapsack_11.pkl  Knapsack_8.pkl  Knapsack_9.pkl  PortfolioOpt.csv  PortfolioOpt_0.pkl  RMAB.csv  RMAB_0.pkl
shells/: 1.sh  ad.sh  advertise.sh  bimatching.sh  bipartitematching.sh  bm132.sh  budget.sh  cubic.sh  cubic_linear.sh  energy.sh  energy1.sh  energy2.sh  energy3.sh  energy4.sh  energy5.sh  knapsack.sh  port.sh  portfolio.sh
shells/benchmarks/: TSP.sh  advertise.sh  bimatching.sh  budget.sh  cubic.sh  energy.sh  knapsack-energy.sh  knapsack.sh  portfolio.sh  shortestpath.sh
shells/bm1/: 32.sh  64.sh
shells/bm2/: 32.sh  64.sh
shells/bm3/: 32.sh  64.sh
visual/: compare_pto_pno.ipynb  draw_barplot.ipynb  draw_boxplot.ipynb  draw_boxplot.py  draw_curve.ipynb  draw_errorbar.ipynb  draw_ood_errorbar.ipynb  draw_risk_curve.ipynb  qualitative.ipynb  visual_curve.ipynb  visual_sp500.ipynb
visual/data/: SP-warcraft.ipynb  TSP-generate.ipynb
(+106 files in other folders)
